discussion/kv_engine/176479/176479_rev11_discussion.txt
======================================================================================================================
DESCRIPTION:

Throttle (external) DCP connections

Throttle the DCP Producer streams unless the connection
hold the Unthrottled privilege.

Test with:

    ./dcpdrain --user user --password password --bucket bucket

Change-Id: If084ede1a2388564368a24c76c9ce95c5116bcc1

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-06-26 08:42:33.000000000
Message: 
Uploaded patch set 11.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-26 09:27:08.000000000
Message: 
Patch Set 11: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47061/ : FAILURE

Failure of GoogleTest "ServerlessTest.UnitsReported":

<pre>
[ RUN      ] ServerlessTest.UnitsReported
C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/tests/testapp_serverless/serverless_test.cc(258): error: Value of: wu.has_value()
  Actual: false
Expected: true
mutate should use WU
[  FAILED  ] ServerlessTest.UnitsReported (3 ms)
ServerlessTest.UnitsReported
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47061/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18312/ : FAILURE

<p>clang-tidy suggested the following changes:
<pre>

cat &lt;&lt;&quot;EOF&quot; | patch -p1
diff --git a/daemon/thread.cc b/daemon/thread.cc
index 04e158b86..825a4f1be 100644
--- a/daemon/thread.cc
+++ b/daemon/thread.cc
@@ -87,7 +87,7 @@ static void create_worker(void (*func)(void*),
 void FrontEndThread::maybeRegisterThrottleableDcpConnection(
         Connection&amp; connection) {
     if (!connection.isUnthrottled()) {
-        dcp_connections.push_back(connection);
+        dcp_connections.emplace_back(connection);
     }
 }
 
EOF

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18312/ )

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/thread.cc:90:25: warning: use emplace_back instead of push_back [modernize-use-emplace]
        dcp_connections.push_back(connection);
                        ^~~~~~~~~~
                        emplace_back(
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/thread.cc:90:25: note: FIX-IT applied suggested code changes
clang-tidy suggested the following changes:

cat &lt;&lt;&quot;EOF&quot; | patch -p1
diff --git a/daemon/thread.cc b/daemon/thread.cc
index 04e158b86..825a4f1be 100644
--- a/daemon/thread.cc
+++ b/daemon/thread.cc
@@ -87,7 +87,7 @@ static void create_worker(void (*func)(void*),
 void FrontEndThread::maybeRegisterThrottleableDcpConnection(
         Connection&amp; connection) {
     if (!connection.isUnthrottled()) {
-        dcp_connections.push_back(connection);
+        dcp_connections.emplace_back(connection);
     }
 }
 
EOF

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18312/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20529/ : FAILURE

Failure of GoogleTest "ServerlessTest.UnitsReported":

<pre>
[ RUN      ] ServerlessTest.UnitsReported
[2022-06-26T08:57:01.189Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/tests/testapp_serverless/serverless_test.cc:258: Failure
[2022-06-26T08:57:01.189Z] Value of: wu.has_value()
[2022-06-26T08:57:01.189Z]   Actual: false
[2022-06-26T08:57:01.189Z] Expected: true
[2022-06-26T08:57:01.189Z] mutate should use WU
[2022-06-26T08:57:01.189Z] [  FAILED  ] ServerlessTest.UnitsReported (2 ms)
ServerlessTest.UnitsReported
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20529/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21177/ : FAILURE

Failure of GoogleTest "ServerlessTest.UnitsReported":

<pre>
[ RUN      ] ServerlessTest.UnitsReported
[2022-06-26T09:16:35.305Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/tests/testapp_serverless/serverless_test.cc:258: Failure
[2022-06-26T09:16:35.305Z] Value of: wu.has_value()
[2022-06-26T09:16:35.305Z]   Actual: false
[2022-06-26T09:16:35.305Z] Expected: true
[2022-06-26T09:16:35.305Z] mutate should use WU
[2022-06-26T09:16:35.305Z] [  FAILED  ] ServerlessTest.UnitsReported (13 ms)
ServerlessTest.UnitsReported
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21177/ )

ThreadSanitizer issue: data race /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/daemon/cookie.cc:209 in Cookie::getRequest() const  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21177/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20183/ : FAILURE

Failure of GoogleTest "ServerlessTest.UnitsReported":

<pre>
[ RUN      ] ServerlessTest.UnitsReported
[2022-06-26T08:48:26.249Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/tests/testapp_serverless/serverless_test.cc:258: Failure
[2022-06-26T08:48:26.249Z] Value of: wu.has_value()
[2022-06-26T08:48:26.249Z]   Actual: false
[2022-06-26T08:48:26.249Z] Expected: true
[2022-06-26T08:48:26.249Z] mutate should use WU
[2022-06-26T08:48:26.249Z] [  FAILED  ] ServerlessTest.UnitsReported (2 ms)
ServerlessTest.UnitsReported
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20183/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8083/ : FAILURE

Failure of GoogleTest "ServerlessTest.UnitsReported":

<pre>
[ RUN      ] ServerlessTest.UnitsReported
[2022-06-26T09:01:19.412Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/tests/testapp_serverless/serverless_test.cc:258: Failure
[2022-06-26T09:01:19.412Z] Value of: wu.has_value()
[2022-06-26T09:01:19.412Z]   Actual: false
[2022-06-26T09:01:19.412Z] Expected: true
[2022-06-26T09:01:19.412Z] mutate should use WU
[2022-06-26T09:01:19.412Z] [  FAILED  ] ServerlessTest.UnitsReported (1 ms)
ServerlessTest.UnitsReported
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8083/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19399/ : FAILURE

Failure of GoogleTest "ServerlessTest.UnitsReported":

<pre>
[ RUN      ] ServerlessTest.UnitsReported
[2022-06-26T09:06:42.884Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/tests/testapp_serverless/serverless_test.cc:258: Failure
[2022-06-26T09:06:42.884Z] Value of: wu.has_value()
[2022-06-26T09:06:42.884Z]   Actual: false
[2022-06-26T09:06:42.884Z] Expected: true
[2022-06-26T09:06:42.884Z] mutate should use WU
[2022-06-26T09:06:42.884Z] [  FAILED  ] ServerlessTest.UnitsReported (2 ms)
ServerlessTest.UnitsReported
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19399/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28562/ : FAILURE

Failure of GoogleTest "ServerlessTest.UnitsReported":

<pre>
[ RUN      ] ServerlessTest.UnitsReported
[2022-06-26T09:03:33.082Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/tests/testapp_serverless/serverless_test.cc:258: Failure
[2022-06-26T09:03:33.082Z] Value of: wu.has_value()
[2022-06-26T09:03:33.082Z]   Actual: false
[2022-06-26T09:03:33.082Z] Expected: true
[2022-06-26T09:03:33.082Z] mutate should use WU
[2022-06-26T09:03:33.082Z] [  FAILED  ] ServerlessTest.UnitsReported (7 ms)
ServerlessTest.UnitsReported
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28562/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17439/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39531/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7982/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
